# Secuencial

./: CMakeLists.txt  main.cpp  sonar-project.properties
.github/workflows/: build.yml
